src/style.css
* {
  overflow-x: hidden;
}

body {
  width: 100vw;
  height: 110vh;
  background-color: #121212;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  align-items: center;
  flex-wrap: nowrap;
  font-family: 'Major Mono Display', monospace;
  font-size: 3em;
  user-select: none;
}

.text {
  margin-top: 100px;
  width: 100vw;
}

noscript > h1 {
  font-size: 48px;
}

.socials {
  height: 100px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.socials svg {
  width: 48px;
  height: 48px;
  border-radius: 15%;
  transition: transform 0.1s ease-in-out;
  overflow: hidden;
}

a {
  text-decoration: none;
  border-radius: 25%;
  color: white;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 20px;
  width: 54px;
  height: 54px;
}

#facebook-container:hover {
  transition: all 0.1s ease-in-out;
  transform: scale(1.1);
  background-color: white;
  color: #355998;
}

#instagram-container:hover {
  transition: all 0.1s ease-in-out;
  transform: scale(1.1);
  background: linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  color: white;
}

#github-container:hover {
  transition: all 0.1s ease-in-out;
  transform: scale(1.1);
  color: #121212;
  background: white;
}

#twitter-container:hover {
  transition: all 0.1s ease-in-out;
  transform: scale(1.1);
  background: #00acee;
  color: white;
}

#twitch-container:hover {
  transition: all 0.1s ease-in-out;
  transform: scale(1.1);
  background: #fff;
  color: #6441a5;
}

#youtube-container:hover {
  transition: all 0.1s ease-in-out;
  transform: scale(1.1);
  background: #FF0000;
  color: white;
}

.logo-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.logo-container svg {
  height: auto;
  width: 280px;
}

main {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

footer {
  margin-bottom: 1vh;
  text-align: center;
  font-size: 0.3em;
}

@media only screen and (max-width: 700px) {
  body {
    margin: 0;
    background-color: #121212;
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 2.25em;
  }
  .text {
    display: inline-block;
    text-align: center;
    align-self: center;
  }
  .socials {
    margin-top: 20px;
  }
  noscript > h1 {
    font-size: 36px;
  }
  a {
    margin: 0 10px;
  }
}

@media (prefers-color-scheme: light) {
  body {
    background: #eceaee;
    color: #303b53;
  }

  svg,
  svg path.cls-1 {
    color: #303b53;
    fill: #303b53;
  }

  a:hover {
    box-shadow: 0 0 5px #303b53;
  }

  #instagram-container:hover svg {
    color: white;
  }

  #twitter-container:hover svg {
    color: white;
  }

  #facebook-container:hover svg {
    color: #355998;
  }

  #twitch-container:hover svg {
    color: #6441a5;;
  }

  #youtube-container:hover svg {
    color: #fff;
  }
}

@media only screen and (min-device-width: 315px) and (max-device-width: 967px) and (orientation: landscape) {
  .content {
    padding-top: 10%;
  }
  .socials {
    margin-top: 20px;
  }
}


.form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.form__group {
  text-align: center;
  position: relative;
  padding: 15px 0 0;
  margin-top: 10px;
  width: 40%;
}

.form__field {
  font-family: inherit;
  width: 100%;
  border: 0;
  border-bottom: 2px solid #fff;
  outline: 0;
  font-size: 1.3rem;
  color: #fff;
  padding: 7px 0;
  background: transparent;
  transition: border-color 0.2s;
}
.form__field::placeholder {
  color: transparent;
}
.form__field:placeholder-shown ~ .form__label {
  font-size: 1.3rem;
  cursor: text;
  top: 20px;
}

.form__label {
  position: absolute;
  top: 0;
  display: block;
  transition: 0.2s;
  font-size: 1rem;
  color: #fff;
}

.form__field:focus {
  padding-bottom: 6px;
  font-weight: 700;
  border-width: 3px;
  border-image: linear-gradient(to right, #11998e, #38ef7d);
  border-image-slice: 1;
}
.form__field:focus ~ .form__label {
  position: absolute;
  top: 0;
  display: block;
  transition: 0.2s;
  font-size: 1rem;
  color: #11998e;
  font-weight: 700;
}

/* reset input */
.form__field:required, .form__field:invalid {
  box-shadow: none;
}

